
    HADOOP-10087. UserGroupInformation.getGroupNames() fails to return primary
    group first when JniBasedUnixGroupsMappingWithFallback is used (cmccabe)

    HADOOP-10175. Har files system authority should preserve userinfo.
    (Chuan Liu via cnauroth)

    HADOOP-10090. Jobtracker metrics not updated properly after execution
    of a mapreduce job. (ivanmi)

Release 2.2.0 - 2013-10-13

  INCOMPATIBLE CHANGES

    HADOOP-10020. Disable symlinks temporarily (cmccabe)

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-9948. Add a config value to CLITestHelper to skip tests on Windows.
    (Chuan Liu via cnauroth)

    HADOOP-9976. Different versions of avro and avro-maven-plugin (Karthik
    Kambatla via Sandy Ryza)

    HADOOP-9758.  Provide configuration option for FileSystem/FileContext
    symlink resolution.  (Andrew Wang via Colin Patrick McCabe)

    HADOOP-8315. Support SASL-authenticated ZooKeeper in ActiveStandbyElector
    (todd)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9776. HarFileSystem.listStatus() returns invalid authority if port
    number is empty. (Shanyu Zhao via ivanmi)

    HADOOP-9761.  ViewFileSystem#rename fails when using DistributedFileSystem.
    (Andrew Wang via Colin Patrick McCabe)

    HADOOP-10003. HarFileSystem.listLocatedStatus() fails.
    (Jason Dere and suresh via suresh)

    HADOOP-10017. Fix NPE in DFSClient#getDelegationToken when doing Distcp 
    from a secured cluster to an insecured cluster. (Haohui Mai via jing9)

Release 2.1.1-beta - 2013-09-23

  INCOMPATIBLE CHANGES

    HADOOP-9944. Fix RpcRequestHeaderProto.callId to be sint32 rather than
    uint32 since ipc.Client.CONNECTION_CONTEXT_CALL_ID is signed (i.e. -3) 
    (acmurthy)

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-9910. proxy server start and stop documentation wrong
    (Andre Kelpe via harsh)

    HADOOP-9446. Support Kerberos SPNEGO for IBM JDK. (Yu Gao via llu)

    HADOOP-9787. ShutdownHelper util to shutdown threads and threadpools.